--- a/.ackrc
+++ b/.ackrc
@@ -1,4 +1,7 @@
 --type-set=cucumber=.feature
 --type-add=php=.inc,.tpl
 --type-add=css=.sass,.scss,.less
+--type-add=html=.haml
 --type-set=log=.log
+--nolog
+--ignore-dir=.idea
