--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 set -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l /bin/bash"
+set -sg escape-time 1
 
 # Smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
@@ -11,3 +11,22 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind -r h resize-pane -L 3
+bind -r j resize-pane -D 3
+bind -r k resize-pane -U 3
+bind -r l resize-pane -R 3
+
+setw -g window-status-current-fg white
+setw -g window-status-current-bg blue
+setw -g window-status-current-attr bright
+
+# This requires install of the tmux-MacOSX-pasteboard project
+#   it is used to fix pbcopy within tmux + vim
+# $ git clone https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard.git
+# $ cd tmux-MacOSX-pasteboard/
+# $ make reattach-to-user-namespace
+# Then, we move the file to someplace on our PATH, like /usr/local/bin:
+# $ sudo mv reattach-to-user-namespace /usr/local/bin
+set -g default-command "reattach-to-user-namespace -l /bin/bash"
