--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,8 @@
 setw -g mode-keys vi
+# The next 2 lines for the paste buffer are experimental
+# I may need to remove these...
+unbind p
+bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
