Latest tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,3 +34,16 @@ setw -g window-status-current-attr bright
 # Then, we move the file to someplace on our PATH, like /usr/local/bin:
 # $ sudo mv reattach-to-user-namespace /usr/local/bin
 set -g default-command "reattach-to-user-namespace -l /bin/bash"
+
+# List of plugins (using tpm from https://github.com/tmux-plugins/tpm)
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '          \
+  tmux-plugins/tpm             \
+  tmux-plugins/tmux-sensible   \
+  tmux-plugins/tmux-resurrect  \
+  tmux-plugins/tmux-continuum  \
+'
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
